fixed contrast

--- a/client/style/root.css
+++ b/client/style/root.css
@@ -12,7 +12,7 @@
 
     --confirm-color: rgb(79, 225, 79);
     --warn-color: yellow;
-    --cancel-color: rgb(227, 56, 56);
+    --cancel-color: rgb(215, 51, 51);
 
     --text-color: #FFF;
     --panel-color: rgba(60, 60, 60, 1);
